# lib2048

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: console_2048.rs
examples/console_2048/: Cargo.toml
examples/console_2048/src/: main.rs
src/: direction.rs  generate.rs  lib.rs  operate.rs  rand2048.rs
src/draft1/: game.rs  generate.rs  mod.rs  operate.rs
